src/main_clib.zig

const word_mod = @import("runtime/word.zig");
const std = @import("std");
const builtin = @import("builtin");

// Word types
pub const word = word_mod.Word;
pub const unicode = word_mod.Unicode;

pub const c = @cImport({
    @cInclude("sys/ioctl.h");
    @cInclude("unistd.h");
    @cInclude("sys/stat.h");
    @cInclude("fcntl.h");
    @cInclude("stdio.h");
    @cInclude("setjmp.h");
    @cInclude("sys/resource.h");
    @cInclude("sys/wait.h");
    @cInclude("float.h");
    @cInclude("string.h");
    @cInclude("stdlib.h");
    @cInclude("ctype.h");
    @cInclude("big.h");
});

pub extern var __stderrp: ?*c.FILE;
pub extern var __stdinp: ?*c.FILE;
pub extern var __stdoutp: ?*c.FILE;

// Definitions from data.h / combs.h
pub const pnlim: c_int = 1024;
pub const BUFSIZE: c_int = 1024;
pub const Word = word_mod.Word;

pub extern var ALIASES: Word;
pub const AP = word_mod.AP;
pub const APPEND = word_mod.APPEND;
pub const ARCTAN_FN = word_mod.ARCTAN_FN;
pub extern var BAD_DUMP: Word;
pub extern var CLASHES: Word;
pub const CODE = word_mod.CODE;
pub const CONS = word_mod.CONS;
pub const CONST = word_mod.CONST;
pub const CONSTRUCTOR = word_mod.CONSTRUCTOR;
pub const COS_FN = word_mod.COS_FN;
pub const DATAPAIR = word_mod.DATAPAIR;
pub const DBL_MAX = c.DBL_MAX;
pub const DECODE = word_mod.DECODE;
pub extern var DETROP: Word;
pub const DROP = word_mod.DROP;
pub const ENTIER_FN = word_mod.ENTIER_FN;
pub const EOF = c.EOF;
pub const ERROR = word_mod.ERROR;
pub const EVAL = word_mod.EVAL;
pub const EXEC = word_mod.EXEC;
pub const EXPORT = word_mod.EXPORT;
pub const EXP_FN = word_mod.EXP_FN;
pub const FILE = c.FILE;
pub const FILEINFO = word_mod.FILEINFO;
pub const FILEMODE = word_mod.FILEMODE;
pub const FILESTAT = word_mod.FILESTAT;
pub const FILTER = word_mod.FILTER;
pub const FOLDL = word_mod.FOLDL;
pub const FOLDL1 = word_mod.FOLDL1;
pub const FOLDR = word_mod.FOLDR;
pub const FORCE = word_mod.FORCE;
pub const FREE = word_mod.FREE;
pub const GETENV = word_mod.GETENV;
pub const HD = word_mod.HD;
pub const I = word_mod.I;
pub const ID = word_mod.ID;
pub const INTEGER = word_mod.INTEGER;
pub const LABEL = word_mod.LABEL;
pub const LIST_LAST = word_mod.LIST_LAST;
pub const LOG10_FN = word_mod.LOG10_FN;
pub const LOG_FN = word_mod.LOG_FN;
pub const MAP = word_mod.MAP;
pub const MERGE = word_mod.MERGE;
pub extern var MISSING: Word;
pub const NUMVAL = word_mod.NUMVAL;
pub const OFFSIDE = word_mod.OFFSIDE;
pub const O_CREAT = c.O_CREAT;
pub const O_RDONLY = c.O_RDONLY;
pub const O_TRUNC = c.O_TRUNC;
pub const O_WRONLY = c.O_WRONLY;
pub const PLUS = word_mod.PLUS;
pub const READ = word_mod.READ;
pub const READBIN = word_mod.READBIN;
pub const RLIMIT_STACK = c.RLIMIT_STACK;
pub const SEQ = word_mod.SEQ;
pub const SHOWFLOAT = word_mod.SHOWFLOAT;
pub const SHOWHEX = word_mod.SHOWHEX;
pub const SHOWNUM = word_mod.SHOWNUM;
pub const SHOWOCT = word_mod.SHOWOCT;
pub const SHOWSCALED = word_mod.SHOWSCALED;
pub const SIGBUS = c.SIGBUS;
pub const SIGFPE = c.SIGFPE;
pub const SIGINT = c.SIGINT;
pub const SIGSEGV = c.SIGSEGV;
pub const SIGTERM = c.SIGTERM;
pub const SIN_FN = word_mod.SIN_FN;
pub const SQRT_FN = word_mod.SQRT_FN;
pub const STARTREAD = word_mod.STARTREAD;
pub const STARTREADBIN = word_mod.STARTREADBIN;
pub const STDOUT_FILENO = c.STDOUT_FILENO;
pub const STRCONS = word_mod.STRCONS;
pub const TAKE = word_mod.TAKE;
pub const TIOCGWINSZ = c.TIOCGWINSZ;
pub const TL = word_mod.TL;
pub extern var TORPHANS: Word;
pub extern var TSUPPRESSED: Word;
pub const UNDEF = word_mod.UNDEF;
pub extern fn UNION(s1: word, s2: word) word;
pub const VALUE = word_mod.VALUE;
pub const XVERSION = 83;
pub const ZIP = word_mod.ZIP;
pub extern fn abort() noreturn;
pub const abstract_t = word_mod.abstract_t;
pub extern fn add1(e: word, s: word) word;
pub extern fn addextn(b: word, s: [*:0]u8) [*:0]u8;
pub extern fn adjust_prefix(f: [*:0]u8) void;
pub const algebraic_t = word_mod.algebraic_t;
pub fn ap(x: Word, y: Word) Word { return make(AP, x, y); }
pub fn ap2(x: Word, y: Word, z: Word) Word { return ap(ap(x, y), z); }
pub extern fn append1(x: word, y: word) word;
pub const bool_t = word_mod.bool_t;
pub const char_t = word_mod.char_t;
pub extern fn chdir(path: [*:0]const u8) c_int;
pub extern fn checktypes() void;
pub extern fn close(fd: c_int) c_int;
pub extern fn codegen(x: word) word;
pub fn cons(x: Word, y: Word) Word { return make(word_mod.CONS, x, y); }
pub fn datapair(x: Word, y: Word) Word { return make(DATAPAIR, x, y); }
pub extern fn deps(x: word) word;
pub extern fn dump_script(files: word, f: ?*FILE) void;
pub extern fn dup2(oldfd: c_int, newfd: c_int) c_int;
pub extern fn execl(path: [*:0]const u8, arg0: [*:0]const u8, ...) c_int;
pub extern fn exit(status: c_int) noreturn;
pub extern fn fclose(file: ?*FILE) c_int;
pub extern fn fileno(file: ?*FILE) c_int;
pub extern fn findid(p: [*:0]const u8) word;
pub extern fn fopen(path: ?*const anyopaque, mode: [*:0]const u8) ?*FILE;
pub extern fn fork() c_int;
pub extern fn fprintf(file: ?*FILE, format: [*:0]const u8, ...) c_int;
pub extern fn fputc(ch: c_int, file: ?*FILE) c_int;
pub const free_t = word_mod.free_t;
pub extern fn fscanf(file: ?*FILE, format: [*:0]const u8, ...) c_int;
pub extern fn gc() void;
pub extern fn gcpatch() void;
pub extern fn get_here(x: Word) Word;
pub extern fn getaka(x: Word) [*:0]const u8;
pub extern fn getc(file: ?*FILE) c_int;
pub extern fn getchar() c_int;
pub extern fn getcwd(buf: [*]u8, size: usize) ?[*]u8;
pub extern fn getenv(name: ?*const anyopaque) ?[*:0]u8;
pub extern fn geterrlin(t_ptr: [*:0]const u8) Word;
pub extern fn getrlimit(resource: c_int, rlp: *struct_rlimit) c_int;
pub extern fn getstring(x: word, cmd: ?[*:0]const u8) [*:0]const u8;
pub extern fn instantiate(t: word) word;
pub extern fn intersection(s1: word, s2: word) word;
pub extern fn ioctl(fd: c_int, request: c_ulong, ...) c_int;
pub extern fn isalpha(ch: c_int) c_int;
pub extern fn isatty(fd: c_int) c_int;
pub extern fn keep(p: [*:0]u8) [*:0]u8;
pub extern fn load_script(f: ?*FILE, src: [*:0]u8, aliases: word, params: word, main: word) word;
pub extern var ltchar: Word;
pub extern fn make(t: u8, x: word, y: word) word;
pub extern fn make_id(p: [*:0]const u8) word;
pub extern fn make_pn(val: word) word;
pub fn make_typ(a: Word, shf: Word, class: Word, info: Word) Word { return cons(cons(a, shf), cons(class, info)); }
pub extern fn malloc(size: usize) ?*anyopaque;
pub extern fn mallocfail(s: [*:0]const u8) void;
pub extern fn member(s: word, x: word) word;
pub extern fn mkprivate(x: word) void;
pub extern fn mkshow(s: word, p: word, t: word) word;
pub extern var newtyps: Word;
pub const num_t = word_mod.num_t;
pub extern fn obey(x: Word) void;
pub extern fn okdump(t: [*:0]u8) c_int;
pub extern fn okid(ch: c_int) c_int;
pub extern fn open(path: [*:0]const u8, flags: c_int, ...) c_int;
pub extern fn openfile(n: [*:0]const u8) c_int;
pub extern fn out(f: ?*FILE, x: word) void;
pub extern fn out_here(f: ?*FILE, h: word, nl: word) void;
pub extern fn out_pattern(f: ?*FILE, x: word) void;
pub extern fn out_type(t: word) void;
pub extern fn output(e: word) void;
pub extern fn outstats() void;
pub extern fn perror(s: [*:0]const u8) void;
pub const placeholder_t = word_mod.placeholder_t;
pub extern fn printf(format: [*:0]const u8, ...) c_int;
pub extern fn printlist(title: [*:0]const u8, l: word) void;
pub extern fn process() word;
pub extern fn putc(ch: c_int, file: ?*FILE) c_int;
pub extern fn putchar(ch: c_int) c_int;
pub extern fn rdline() [*:0]u8;
pub extern fn read(fd: c_int, buf: ?*anyopaque, count: usize) isize;
pub fn readvals(x: Word, y: Word) Word { return make(word_mod.STARTREADVALS, x, y); }
pub extern fn report_type(x: word) void;
pub extern fn resetheap() void;
pub extern fn sayhere(h_val: Word, nl: Word) void;
pub extern fn setbuf(file: ?*FILE, buf: ?[*]u8) void;
pub extern fn setdiff(s1: word, s2: word) word;
pub extern fn setprefix(p: [*:0]u8) void;
pub extern fn setrlimit(resource: c_int, rlp: *const struct_rlimit) c_int;
pub extern fn setupdic() void;
pub const sigjmp_buf = c.sigjmp_buf;
pub const siglongjmp = c.siglongjmp;
pub const sigsetjmp = c.sigsetjmp;
pub extern fn snprintf(buf: [*]u8, size: usize, format: [*:0]const u8, ...) c_int;
pub extern fn sprintf(buf: [*]u8, format: [*:0]const u8, ...) c_int;
pub extern fn sscanf(buf: ?*const anyopaque, format: [*:0]const u8, ...) c_int;
pub fn stderr() ?*FILE {
    if (builtin.os.tag == .macos) return __stderrp;
    return @ptrCast(std.c.stderr);
}
pub fn stdin() ?*FILE {
    if (builtin.os.tag == .macos) return __stdinp;
    return @ptrCast(std.c.stdin);
}
pub fn stdout() ?*FILE {
    if (builtin.os.tag == .macos) return __stdoutp;
    return @ptrCast(std.c.stdout);
}
pub extern fn sto_dbl(x: f64) word;
pub extern fn strcat(dst: ?*anyopaque, src: ?*const anyopaque) ?*anyopaque;
pub extern fn strchr(s: ?*const anyopaque, c: c_int) ?[*:0]u8;
pub extern fn strcmp(a: ?*const anyopaque, b: ?*const anyopaque) c_int;
pub fn strcons(x: Word, y: Word) Word { return make(STRCONS, x, y); }
pub extern fn strcpy(dst: ?*anyopaque, src: ?*const anyopaque) ?*anyopaque;
pub extern fn strlen(s: ?*const anyopaque) usize;
pub extern fn strncat(dst: ?*anyopaque, src: ?*const anyopaque, n: usize) ?*anyopaque;
pub extern fn strncmp(a: ?*const anyopaque, b: ?*const anyopaque, n: usize) c_int;
pub extern fn strrchr(s: ?*const anyopaque, c: c_int) ?[*:0]u8;
pub extern fn strstr(haystack: ?*const anyopaque, needle: ?*const anyopaque) ?[*:0]u8;
pub const struct_rlimit = c.struct_rlimit;
pub const struct_winsize = c.struct_winsize;
pub extern fn subsumes(t1: word, t2: word) word;
pub const synonym_t = word_mod.synonym_t;
pub extern fn system(cmd: ?*const anyopaque) c_int;
pub const time_t = c.time_t;
pub extern fn token() [*:0]u8;
pub extern fn trueheapsize() word;
pub extern fn type_of(x: word) word;
pub const type_t = word_mod.type_t;
pub extern fn typesfirst(x: word) word;
pub const undef_t = word_mod.undef_t;
pub extern fn ungetc(ch: c_int, file: ?*FILE) c_int;
pub extern fn unlink(path: [*:0]const u8) c_int;
pub const void_t = word_mod.void_t;
pub extern fn wait(status: ?*c_int) c_int;
pub extern fn write(fd: c_int, buf: ?*const anyopaque, count: usize) isize;
pub const wrong_t = word_mod.wrong_t;
